@@ -54,6 +54,9 @@
 	<LI>PRE text didn't adjust the line height for the tallest
 	fragment in the line.
 
+	<LI>HTMLDOC tried to seek backwards when reading HTML
+	from the standard input.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.18</H2>
